--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "2a9a982a71397a06",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Inbox/School/Math/Индукция и неравенства 2021-10-15.md",
-            "mode": "source"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -39,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "ряда",
+                "query": "tag:#📥️",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -60,7 +57,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 814.4999980926514
+    "width": 276.49999809265137
   },
   "right": {
     "id": "f509b378dba75f33",
@@ -86,9 +83,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Inbox/School/Math/Индукция и неравенства 2021-10-15.md"
-              }
+              "state": {}
             }
           },
           {
@@ -97,7 +92,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Inbox/School/Math/Индукция и неравенства 2021-10-15.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -114,7 +108,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Inbox/School/Math/Индукция и неравенства 2021-10-15.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -136,25 +129,23 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 3
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 208.5,
-    "collapsed": true
+    "width": 208.5
   },
   "active": "2a9a982a71397a06",
   "lastOpenFiles": [
-    "Inbox/School/Math/Индукция и неравенства 2021-10-15.md",
-    "Inbox/School/Math/Множества 2021-10-10.md",
-    "Inbox/School/Math/Индукция и делимость 2021-10-15.md",
-    "Inbox/School/Math/Индукция 2021-10-10.md",
-    "Inbox/School/Math/Перестановки на m мест 2021-10-10.md",
-    "Outbox/Math/Треугольник Паскаля формула нижнего ряда 2021-10-10.md",
-    "Inbox/School/Math/Сигма 2021-10-10.md",
-    "Utility/Templates/Words/дневник.md",
-    "Outbox/Math language/Использование 2021-10-15 2021-10-15.md",
-    "Inbox/School/Math/Умножение вектора на n 2021-10-11.md"
+    "Inbox/Programming/Node js/Npm 2021-10-16.md",
+    "Inbox/Programming/Node js/Импортирование 2021-10-16.md",
+    "Inbox/Programming/Node js/Версии 2021-10-16.md",
+    "Inbox/Programming/Node js/Npx 2021-10-16.md",
+    "Inbox/Programming/Node js/PackageJson 2021-10-16.md",
+    "Outbox/Идеи.md",
+    "&.md",
+    "+.md",
+    "Outbox/Politics/Мои взгляды 2021-10-06.md",
+    "Outbox/Math language/Использование 2021-10-15 2021-10-15.md"
   ]
 }
